# supercommit

./: .gitignore  README.md  config.toml  pyproject.toml  supercommit.toml
supercommit/: config.py  git.py  main.py  ollama.py  utils.py
