[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supercommit"
version = "0.2.6-alpha"
description = "A CLI utility for making better Git commits"
authors = [
    { name="Bamboo Blood", email="bambooblood@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "typer[all]",
    "GitPython",
    "requests",
    "rich",
    "toml"
]

[project.scripts]
supercommit = "supercommit.main:main"

[tool.setuptools]
packages = ["supercommit"]
